# Genshin-Artifact-Manage-System

./: README.md
Code/: Artifact.cpp  Artifact.h  CMakeLists.txt  Character.cpp  Character.h  FavoriteOri.cpp  FavoriteOri.h  Import.cpp  Import.h  ImportCharacter.cpp  ImportCharacter.h  ImportWeapon.cpp  ImportWeapon.h  Resources.qrc  Weapon.cpp  Weapon.h  backpack.cpp  backpack.h  backpack.ui  characterselecte.cpp  characterselecte.h  characterselecte.ui  data.cpp  data.h  detectsavedfile.cpp  detectsavedfile.h  detectsavedfile.ui  favdelmod.cpp  favdelmod.h  favdelmod.ui  favorite.cpp  favorite.h  favorite.ui  importmanually.cpp  importmanually.h  importmanually.ui  importwidget.cpp  importwidget.h  importwidget.ui  isdelete.cpp  (+17 more)
Code/Data/: Artifact.json  Character.json  Weapon.json  setFilter.qss  setFilter2.qss
